Fixed navbar spacing, clicking bdropdown on mobile, overlap of navbar on contact page, overflow on home, header centering at small screens.

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -37,6 +37,9 @@ h1 {
 }
 
 @media (max-width: 900px) {
+    h1 {
+        margin-top: 25%;
+    }
     .page__content {
         flex-direction: column;
         align-items: center;
@@ -170,6 +173,7 @@ h1 {
     flex-direction: column;
     align-items: center;
     z-index: 100;
+    margin-top: 2rem;
 }
 
 .contact__box h3 {
