--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,8 @@
-.home-body{
-    background-color: black;
-    overflow: hidden;
+
+header, main { 
+    overflow-x: hidden;                                                   /*Disables scrolling left and right*/
 }
+
 
 .header {
     background: linear-gradient(rgba(0,0,0, .1), rgba(0,0,0, 0.4)),   /*This creates a gradient overlay goiing from very light black at the top to darker at the bottom*/
@@ -11,34 +12,47 @@
     background-position: center;                                          /*Center the picture horizontally and vertically*/
     background-attachment: fixed;                                         /*This makes the background image fixed to a specific position*/
     font-size:  var(--font-size-normal);
+
 }
 
 .header__text {
+    display: flex;
+    width: inherit;
+    color: white;
     position: absolute;
+    flex-direction: column;
     top: 50%;                                                             /*Moves the top edge of the element to 50% of height of its containing element*/
     transform: translateY(-50%);                                          /*This adjusts the position element moving it upwards 50% of its own height*/
 }
 
-.header__text p {                                                         /*This targets all <p> elements that are children of an element with .header__text class*/
-    margin: 1.5rem 0 3.5rem;                                              /*Top margin 1.5rem, right margin 0rem, bottom margin 3.5rem (left is omitted so it is 0rem)*/
-    max-width: var(--container-medium-width);
+.header__text p {    
     font-family: 'Jost', sans-serif;
     font-size: var(--font-size-medium);
     line-height: 125%;
 }
 
 .header__text h1 {
-    font-size: 6rem;
-    font-family: Roboto, 'Jost', sans-serif;
+    font-size: var(--font-size-huge);
+    font-family: 'Jost', sans-serif;
     line-height: 140%;
 }
 
-@media(max-width: 500px) {                                                /*If screen width is less than 500px align the text to the center*/
-    .header {
-        text-align: center;
-    }
-
+@media(min-width: 700px) {
     .header__text p {
-        transform: scale(.8);                                             /*If screen width is less than 500px scale <p> text to .8*/
+        max-width: var(--container-medium-width);
     }
 }
+
+@media(max-width: 700px) {                                                /*If screen width is less than 500px align the text to the center*/
+    .header__text {
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .header__text p, .header__text h1 {
+        transform: scale(.8);                                             /*If screen width is less than 500px scale <p> text to .8*/
+    }
+
+}
+
